# cryptopals

./: .gitattributes  Cargo.toml  README.md  letter_counter.py
.github/workflows/: rust.yml
data/: 10.txt  19.txt  20.txt  4.txt  6.txt  7.txt  8.txt
dictionary/: american-english
src/: aes.rs  datatypes.rs  detect.rs  lib.rs  mersenne_twister.rs  oracle.rs  padding.rs  random.rs  utils.rs
src/challenges/: mod.rs  set1.rs
src/challenges/set1/: challenge1.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge6.rs  challenge7.rs  challenge8.rs  mod.rs
src/challenges/set2/: challenge10.rs  challenge11.rs  challenge12.rs  challenge13.rs  challenge14.rs  challenge15.rs  challenge16.rs  challenge9.rs  mod.rs
src/challenges/set3/: challenge17.rs  challenge18.rs  challenge19.rs  challenge20.rs  challenge21.rs  challenge22.rs  challenge23.rs  mod.rs
