[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.52"
base64  = "0.13.0"
hex = "0.4.3"
fst = {version = "0.4.7", features = ["levenshtein"]}
threadpool = "1.8.1"
indoc = "1.0.4"
hamming = "0.1.3"
itertools = "0.10.3"
ordered-float = "2.10.0"
openssl = "0.10.38"
rand = "0.8.5"
